src/test/ui/type-alias-impl-trait/issue-60564.stderr
error: non-defining opaque type use in defining scope
  --> $DIR/issue-60564.rs:21:9
   |
LL |         (0u8..n).rev().map(move |shift| ((self >> T::from(shift)) & T::from(1)).try_into().unwrap())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used non-generic type `u8` for generic parameter
  --> $DIR/issue-60564.rs:8:25
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   |                         ^

error: could not find defining uses
  --> $DIR/issue-60564.rs:8:30
   |
LL | type IterBitsIter<T, E, I> = impl std::iter::Iterator<Item = I>;
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

